--- a/src/sass/components/_mediaqueries.scss
+++ b/src/sass/components/_mediaqueries.scss
@@ -30,7 +30,7 @@
 @media screen and (max-width: 600px) {
   #theheader{
     margin: 0 12px;
-    margin-bottom: 12px;
+    margin-bottom: 96px;
     grid-template-columns: [leftleft] 100% [rightright]0%;
     grid-template-rows: [first] 95px [second] 95px;
     padding-top: 48px;
@@ -39,6 +39,8 @@
     grid-row-start: first;
     grid-row-end: first;
     text-align: center;
+    padding: 0 12px;
+    margin-top: 0;
   }
   .examplesbtn,#send{
     grid-column-start: leftleft;
@@ -112,7 +114,18 @@
     margin: 0 12px;
     padding: 0;
   }
-
+  .headermenu{
+    height: 48px;
+    -ms-grid-column: leftleft;
+        grid-column-start: leftleft;
+    margin-left: 12px;
+  -ms-grid-row-align: center;
+  -ms-grid-column-align: stretch;
+  place-self: center stretch;
+  }
+  #download{
+    margin-left:12px;
+  }
 }
 .fixtopfix{
   width:100%;
